Stable for minor release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nafilas-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clack/core": "^0.3.4",
     "@clack/prompts": "^0.7.0",
+    "chalk": "^5.3.0",
     "conf": "^12.0.0",
     "wrap-ansi": "^9.0.0"
   }
